--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ li {
 }
 
 .weather-temperature strong {
-  color: blue;
+  color: #0069d9;
   font-size: 64px;
   line-height: 1;
   font-weight: 400;
@@ -59,4 +59,14 @@ li {
   position: relative;
   font-size: 16px;
   top: -34px;
+}
+
+.weather-temperature .active {
+  color: black;
+  cursor: default;
+}
+
+weather-temperature .active:hover {
+  text-decoration: none;
+  color: #0069d9;
 }
