--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: black;
+  color: #201f34;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -18,7 +18,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: black;
+  color: #201f34;
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
@@ -34,7 +34,7 @@ li {
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid black;
+  border: 1px solid rgba(94, 88, 88, 0.137);
   border-radius: 10px;
 }
 
@@ -68,5 +68,9 @@ li {
 
 weather-temperature .active:hover {
   text-decoration: none;
+  color: #0069d9;
+}
+
+.open-source {
   color: #0069d9;
 }
